--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "server",
+  "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "data:import": "node seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "mern",
+    "express",
+    "node"
+  ],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Backend API for the MarcoHotel booking system.",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "express": "^4.19.2",
     "mongoose": "^8.19.1"
   },
   "devDependencies": {
