--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "name": "marcohotel",
   "version": "1.0.0",
+  "description": "Full-stack hotel booking system (MERN stack structure).",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client": "npm run dev --prefix client",
+    "backend": "npm run dev --prefix backend",
+    "dev": "npm-run-all --parallel client backend"
   },
-  "keywords": [],
+  "keywords": [
+    "mern",
+    "react",
+    "node",
+    "bootstrap"
+  ],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
